--- a/gui.glade
+++ b/gui.glade
@@ -291,10 +291,30 @@
                                 <property name="orientation">vertical</property>
                                 <property name="spacing">10</property>
                                 <child>
-                                  <object class="GtkLabel" id="label_pkmn_types">
+                                  <object class="GtkVBox" id="vbox_pkmn_type_growth_lbl">
                                     <property name="visible">True</property>
-                                    <property name="xalign">0</property>
-                                    <property name="ypad">5</property>
+                                    <property name="orientation">vertical</property>
+                                    <property name="spacing">5</property>
+                                    <child>
+                                      <object class="GtkLabel" id="label_pkmn_types">
+                                        <property name="visible">True</property>
+                                        <property name="xalign">0</property>
+                                      </object>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="position">0</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <object class="GtkLabel" id="label_pkmn_growth_rate">
+                                        <property name="visible">True</property>
+                                        <property name="xalign">0</property>
+                                      </object>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="position">1</property>
+                                      </packing>
+                                    </child>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -359,27 +379,6 @@
                                             <property name="position">4</property>
                                           </packing>
                                         </child>
-                                        <child>
-                                          <object class="GtkLabel" id="label_stat_EXP">
-                                            <property name="visible">True</property>
-                                            <property name="xalign">1</property>
-                                            <property name="label" translatable="yes">Base Exp. yield</property>
-                                          </object>
-                                          <packing>
-                                            <property name="padding">10</property>
-                                            <property name="position">5</property>
-                                          </packing>
-                                        </child>
-                                        <child>
-                                          <object class="GtkLabel" id="label_stat_CAP">
-                                            <property name="visible">True</property>
-                                            <property name="xalign">1</property>
-                                            <property name="label" translatable="yes">Capture rate</property>
-                                          </object>
-                                          <packing>
-                                            <property name="position">6</property>
-                                          </packing>
-                                        </child>
                                       </object>
                                       <packing>
                                         <property name="position">0</property>
@@ -429,13 +428,60 @@
                                             <property name="position">4</property>
                                           </packing>
                                         </child>
+                                      </object>
+                                      <packing>
+                                        <property name="position">1</property>
+                                      </packing>
+                                    </child>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="position">1</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkHBox" id="hbox_cpl_stats">
+                                    <property name="visible">True</property>
+                                    <property name="spacing">5</property>
+                                    <child>
+                                      <object class="GtkVBox" id="vbox_cpl_stats_labels">
+                                        <property name="visible">True</property>
+                                        <property name="orientation">vertical</property>
+                                        <child>
+                                          <object class="GtkLabel" id="label_stat_EXP">
+                                            <property name="visible">True</property>
+                                            <property name="xalign">1</property>
+                                            <property name="label" translatable="yes">Base Exp. yield</property>
+                                          </object>
+                                          <packing>
+                                            <property name="position">0</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <object class="GtkLabel" id="label_stat_CAP">
+                                            <property name="visible">True</property>
+                                            <property name="xalign">1</property>
+                                            <property name="label" translatable="yes">Capture rate</property>
+                                          </object>
+                                          <packing>
+                                            <property name="position">1</property>
+                                          </packing>
+                                        </child>
+                                      </object>
+                                      <packing>
+                                        <property name="position">0</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <object class="GtkVBox" id="vbox_cpl_stats_progressbars">
+                                        <property name="visible">True</property>
+                                        <property name="orientation">vertical</property>
                                         <child>
                                           <object class="GtkProgressBar" id="progressbar_stat_EXP">
                                             <property name="visible">True</property>
                                           </object>
                                           <packing>
-                                            <property name="padding">10</property>
-                                            <property name="position">5</property>
+                                            <property name="position">0</property>
                                           </packing>
                                         </child>
                                         <child>
@@ -443,7 +489,7 @@
                                             <property name="visible">True</property>
                                           </object>
                                           <packing>
-                                            <property name="position">6</property>
+                                            <property name="position">1</property>
                                           </packing>
                                         </child>
                                       </object>
@@ -454,7 +500,7 @@
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
-                                    <property name="position">1</property>
+                                    <property name="position">2</property>
                                   </packing>
                                 </child>
                                 <child>
@@ -474,7 +520,7 @@
                                     </child>
                                   </object>
                                   <packing>
-                                    <property name="position">2</property>
+                                    <property name="position">3</property>
                                   </packing>
                                 </child>
                               </object>
